Added gesture scroll simulation for web

--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
 				<div class="grid-2">
 					<article class="gb project">
 						<div class="thumb">
-							<img src="https://images.unsplash.com/photo-1555949963-aa79dcee981c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="IoT-Based Smart Home Prototype">
+							<img src="https://tse1.mm.bing.net/th/id/OIP.wQ4_Q3Oi6XTfBqMg6rq3YgHaE6?w=474&h=474&c=7&p=0" alt="IoT-Based Smart Home Prototype">
 						</div>
 						<div class="body">
 							<h3>IoT-Based Smart Home Prototype</h3>
@@ -900,7 +900,7 @@
 
 					<article class="gb project">
 						<div class="thumb">
-							<img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Helmet & Vehicle Detection System">
+							<img src="https://tse1.mm.bing.net/th/id/OIP.0NfxwBISXFovAbD8SQdc9gAAAA?w=389&h=389&c=7&p=0" alt="Helmet & Vehicle Detection System">
 						</div>
 						<div class="body">
 							<h3>Helmet & Vehicle Detection (AI/ML)</h3>
@@ -928,7 +928,7 @@
 
 					<article class="gb project">
 						<div class="thumb">
-							<img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="IoT Pothole Detector concept">
+							<img src="https://tse3.mm.bing.net/th/id/OIP.xaJ2TT0uD5pEYubMBAGHFQHaE8?w=474&h=474&c=7&p=0" alt="IoT Pothole Detector concept">
 						</div>
 						<div class="body">
 							<h3>IoT Pothole Detector (Concept)</h3>
@@ -960,10 +960,10 @@
 							<p class="muted">Automated certificate generation with bulk inputs.</p>
 							<div class="tags"><span class="tag">Web App</span><span class="tag">Automation</span><span class="tag">JavaScript</span><span class="tag">PDF</span></div>
 							<div class="links">
-								<a class="link" href="https://github.com/yourusername/certificate-builder" target="_blank" rel="noopener"><i class="fab fa-github"></i> Source Code</a>
+								<a class="link" href="https://github.com/aadhish16/Certificate-Builder-for-Organizations" target="_blank" rel="noopener"><i class="fab fa-github"></i> Source Code</a>
 							</div>
 						</div>
-					</article>
+					</article>	
 
 					<article class="gb project">
 						<div class="thumb">
@@ -1069,8 +1069,7 @@
 						<div class="social">
 							<a class="sq" href="http://www.linkedin.com/in/aadhish-kumar" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
 							<a class="sq" href="https://github.com/aadhish16" target="_blank" rel="noopener" aria-label="GitHub"><i class="fab fa-github"></i></a>
-							<a class="sq" href="https://instagram.com/aadhish_" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-						</div>
+													</div>
 			
 </div>		
 					<div class="grid-2">
@@ -1103,8 +1102,8 @@
 
 	<footer>
 		<div class="container">
-			<p>© 2025 Aadhish Kumar S. All Rights Reserved.</p>
-		</div>
+			<p>2025 Aadhish Kumar S. All Rights Reserved.</p>
+		</div>f
 	</footer>
 
 	<a id="toTop" aria-label="Scroll to top"><i class="fas fa-arrow-up"></i></a>
