Added gesture scroll simulation for web

--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
 	<footer>
 		<div class="container">
 			<p>2025 Aadhish Kumar S. All Rights Reserved.</p>
-		</div>f
+		</div>
 	</footer>
 
 	<a id="toTop" aria-label="Scroll to top"><i class="fas fa-arrow-up"></i></a>
