Added custom preview banner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="Aadhish Kumar S · Portfolio">
 	<meta property="og:description" content="Computer Engineering · IoT · AI/ML · Embedded Systems">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://sdmntpraustraliaeast.oaiusercontent.com/files/00000000-2d14-61fa-ae93-9bc50444cdff/raw?se=2025-09-25T14%3A44%3A39Z&sp=r&sv=2024-08-04&sr=b&scid=1be8611b-04d4-59e9-8002-2aaad6529a75&skoid=cb94e22a-e3df-4e6a-9e17-1696f40fa435&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-24T17%3A19%3A05Z&ske=2025-09-25T17%3A19%3A05Z&sks=b&skv=2024-08-04&sig=vteJhyZPetWTedPAR8uwBkJoX5zhQnS/lid%2BOqikhAE%3D&auto=format&fit=crop">
+	<meta property="og:image" content="C:\Users\admin\Desktop\port1\assets\preview.png&auto=format&fit=crop">
 	<meta name="theme-color" content="#0f172a">
 
 	<style>
