Added custom preview banner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="Aadhish Kumar S · Portfolio">
 	<meta property="og:description" content="Computer Engineering · IoT · AI/ML · Embedded Systems">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="C:\Users\admin\Desktop\port1\assets\preview.png&auto=format&fit=crop">
+	<meta property="og:image" content="C:\Users\admin\Desktop\port1\assets\preview.png">
 	<meta name="theme-color" content="#0f172a">
 
 	<style>
