Added custom preview banner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="Aadhish Kumar S · Portfolio">
 	<meta property="og:description" content="Computer Engineering · IoT · AI/ML · Embedded Systems">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://ibb.co/84T2DLKt">
+	<meta property="og:image" content="https://i.ibb.co/zTn1FmwK/Untitled-design-3.png">
 	<meta name="theme-color" content="#0f172a">
 
 	<style>
