--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="Aadhish Kumar S · Portfolio">
 	<meta property="og:description" content="Computer Engineering · IoT · AI/ML · Embedded Systems">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://i.ibb.co/zTn1FmwK/Untitled-design-3.png">
+	<meta property="og:image" content="https://github.com/aadhish16/Portfolio/raw/ab08ba4158be6d7fa1346e6c757eb7800f637483/assets/preview.png">
 	<meta name="theme-color" content="#0f172a">
 
 	<style>
