--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<meta property="og:description" content="Computer Engineering · IoT · AI/ML · Embedded Systems">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="https://github.com/aadhish16/Portfolio/raw/ab08ba4158be6d7fa1346e6c757eb7800f637483/assets/preview.png">
+	<meta property="og:image:width" content="1200"> 
+    <meta property="og:image:height" content="630">
 	<meta name="theme-color" content="#0f172a">
 
 	<style>
