Added custom preview banner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="Aadhish Kumar S · Portfolio">
 	<meta property="og:description" content="Computer Engineering · IoT · AI/ML · Embedded Systems">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://github.com/aadhish16/Portfolio/raw/ab08ba4158be6d7fa1346e6c757eb7800f637483/assets/preview.png">
+	<meta property="og:image" content="https://drive.google.com/thumbnail?id=1f-3pqFIc8SMwG6z_Hy4N6MoWOjU3L83P" alt="File Thumbnail">
 	<meta property="og:image:width" content="1200"> 
     <meta property="og:image:height" content="630">
 	<meta name="theme-color" content="#0f172a">
