--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><circle cx=%2250%22 cy=%2250%22 r=%2240%22 fill=%22%234f46e5%22/></svg>">
 
-<meta property="og:title" content="Aadhish Kumar  · Portfolio">
+<meta property="og:title" content="Aadhish Kumar S · Portfolio">
 <meta property="og:description" content="Computer Engineering · IoT · AI/ML · Embedded Systems">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://via.placeholder.com/1200x630/0f172a/ffffff?text=Aadhish+Kumar+S+Portfolio">
+<meta property="og:image" content="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=1200&h=630&fit=crop">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta name="theme-color" content="#0f172a">
