Updated project files

--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
 		<div class="container nav">
 			<div class="brand" aria-label="Site logo">
 				<span class="badge-dot" aria-hidden="true"></span>
-				<span>Aadhish&nbsp;Kumar</span>
+				<span>Aadhish&nbsp;Kumar&nbsp;S</span>
 			</div>
 			<nav class="nav-links" aria-label="Primary">
 				<a href="#home" class="active">Home</a>
@@ -971,6 +971,7 @@
 						<div class="stat">
 							<i class="fas fa-project-diagram stat-icon"></i>
 							<div class="num" data-target="8">0</div>
+							 
 							<div class="label">Projects Completed</div>
 						</div>
 						<div class="stat">
@@ -1301,7 +1302,10 @@
 
 	<footer>
 		<div class="container">
-			<p>2025 Aadhish Kumar S. All Rights Reserved.</p>
+		<H3><marquee behavior="scroll" direction="left">AADHISH KUMAR S</marquee></H3>
+		<H3>AADHISH KUMAR S</H3>
+		<H3><marquee behavior="scroll" direction="right">AADHISH KUMAR S</marquee></H3>
+		<p>2025 All Rights Reserved.</p>
 		</div>
 	</footer>
 
